--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "project_esstic_bk",
+  "name": "backend",
   "version": "1.0.0",
-  "description": "Esstic mark management system",
+  "description": "",
   "main": "index.js",
   "scripts": {
     "dev": "nodemon index.js",
